# LLM-Serving-Platform

./: .dockerignore  .gitignore  project-setup.py  pyproject.toml
backend/api/: main.py
backend/api/routes/: admin.py  generation.py  health.py  models.py  root.py
backend/api/schemas/: generate_request.py  generate_response.py  model_info_response.py  model_status_response.py  upload_model_response.py
backend/services/: inference_engine.py  lifecycle_manager.py  model_loader.py  registry_service.py  text_generation.py  tokenizer_loader.py  tokenizer_service.py  upload_service.py  validator.py
core/config/: gpt_config.py
core/models/: activations.py  attention.py  embeddings.py  feedforward.py  gpt.py  normalization.py  transformer_block.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: generate.html  index.html  models.html  upload.html
infrastructure/docker/: docker-compose.yml
requirements/: base.txt  dev.txt  serving.txt
tests/resources/: sample_config.json
tests/sanity/: test_activations.py  test_attention.py  test_embeddings.py  test_feedforward.py  test_gpt.py  test_gpt_config.py  test_inference_engine.py  test_inference_generation.py  test_lifecycle_manager.py  test_model_loader.py  test_model_loader_weights.py  test_normalization.py  test_registry_service.py  test_text_generation.py  test_tokenizer_loader.py  test_transformer_block.py
training/: dataset.py  evaluate.py  loss.py  train.py
training/configs/: gpt_35m.json
training/utils/: checkpoint.py  save_safetensor.py
(+12 files in other folders)
